--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main>
         <h2>Välkommen till den prisbelönta pizzerian; KAPET!</h2>
-        <p>Under 50 års tid har vår </p>
+        <p>Under 50 års tid har vår restaurang lol </p>
 
         <h3>Öppettider</h3>
         <p>Vardagar: Dygnet Runt</p>
