--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <title>Kapet</title>
 </head>
 
@@ -12,7 +15,7 @@
     <header>
         <h1>KAPET</h1>
         <nav>
-            <ul>
+            <ul class="links">
                 <il><a href="pizzakebab.html">Vår Pizza och Kebab</a></il>
                 <il><a href="glass.html">Våra Glassar</a></il>
                 <il><a href="about.html">Om Oss</a></il>
@@ -36,7 +39,9 @@
 
     <footer>
         <ul>
-            <il><a href="https://www.facebook.com"><img src="fb-logo.png"></a></il>
+            <il><a href="https://www.facebook.com"><img class="logo" src="/bilder/fb-logo.png"></a></il>
+            <il><a href="https://www.instagram.com"><img class="logo" src="/bilder/ig-logo.png"></a></il>
+            <il><a href="https://www.twitter.com"><img class="logo" src="/bilder/twitter-logo.png"></a></il>
         </ul>
     </footer>
 </body>
