--- a/index.html
+++ b/index.html
@@ -8,42 +8,69 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
-    <title>Kapet</title>
+    <title>Kapet Pizzeria</title>
 </head>
 
 <body>
     <header>
-        <h1>KAPET</h1>
-        <nav>
-            <ul class="links">
-                <il><a href="pizzakebab.html">Vår Pizza och Kebab</a></il>
-                <il><a href="glass.html">Våra Glassar</a></il>
-                <il><a href="about.html">Om Oss</a></il>
+        <nav class="nav main-nav">
+            <ul>
+                <il><a href="pizzakebab.html">PIZZA & KEBAB</a></il>
+                <il><a href="glass.html">GLASS</a></il>
+                <il><a href="about.html">OM OSS</a></il>
             </ul>
         </nav>
-        <hr>
+        <h1>KAPET</h1>
     </header>
 
     <main>
-        <h2>Välkommen till den prisbelönta pizzerian; KAPET!</h2>
-        <p>Under 50 års tid har vår restaurang asd</p>
+        <section>
+            <div>
+                <h2>Välkommen till den prisbelönta pizzerian; KAPET!</h2>
+                <p>Under 50 års tid har vår restaurang asd</p>
+            </div>
+        </section>
 
-        <h3>Öppettider</h3>
-        <p>Vardagar: Dygnet Runt</p>
-        <p>Lördagar: 09:00-21:00 </p>
-        <p>Söndagar: 07:30-23:00</p>
+        <section>
+            <div class="schedule">
+                <div>
+                    <h3>Öppettider</h3>
+                    <p>Vardagar: Dygnet Runt</p>
+                    <p>Lördagar: 09:00-21:00 </p>
+                    <p>Söndagar: 07:30-23:00</p>
+                </div>
+            </div>
+        </section>
 
-        <h4>Information angående Covid-19</h4>
-        <p>Vi håller avstånd inne på restaurangen. Att beställa online fungerar utmärkt! Vi har stadens bästa utkörning som alltid håller tidsramen på 10 minuter en kvart efter beställning.</p>
+        <section>
+            <div>
+                <h4>Information angående Covid-19</h4>
+                <p>Vi håller avstånd inne på restaurangen. Att beställa online fungerar utmärkt!
+                <br> Vi har stadens bästa utkörning som alltid håller tidsramen på 10 minuter en kvart efter beställning.</p>
+            </div>
+        </section>
     </main>
 
-    <footer>
-        <ul>
-            <il><a href="https://www.facebook.com"><img class="logo" src="/bilder/fb-logo.png"></a></il>
-            <il><a href="https://www.instagram.com"><img class="logo" src="/bilder/ig-logo.png"></a></il>
-            <il><a href="https://www.twitter.com"><img class="logo" src="/bilder/twitter-logo.png"></a></il>
-        </ul>
+    <footer class="main-footer">
+        <div class="container main-footer-container">
+            <ul class="nav footer-nav">
+                <il>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img src="bilder/fb-logo.png">
+                    </a>
+                </il>
+                <il>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img src="bilder/ig-logo.png">
+                    </a>
+                </il>
+                <il>
+                    <a href="https://www.twitter.com" target="_blank">
+                        <img src="bilder/twitter-logo.png">
+                    </a>
+                </il>
+            </ul>
+        </div>
     </footer>
 </body>
-
 </html>
