la in article och section taggar

--- a/glass.html
+++ b/glass.html
@@ -35,17 +35,23 @@
     </header>
    
    <main>
+    <article>
         <h1>Kapets smarriga glass</h1>
         <h2>Kapets glass är en raritet i sig. Självklart närproducerad, gräddig och lyxig. Den finns i tre fantastiska smaker</h2>
-
+    </article>
+    <hr color="#000000">
+    <section>
         <h1>Karamellkonfetti</h1> 
         <h3>Kevins självklara favorit! Smakar såklart karamell och gifters sig med en kaskad av konfetti i färgglada smaker.</h3>
-
+    </section>
+    <section>
         <h1>Amarettoapelsin</h1>
         <h3>Andreas aningen mognare favorit. Ett bröllop till mandeltoner och apelsin</h3>
-
+    </section>
+    <section>
         <h1>Punschpopcorn</h1>
         <h3>Petras "tanten-som-inte-vill-bli-stor"-favorit. Självklart som ett bridgeparti med punsch och popcorn</h3>
+    </section>
 
     </main>
     <footer>
