--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <il><a href="about.html">OM OSS</a></il>
             </ul>
         </nav>
-        <h1>KAPET</h1>
+        <img id="kapetLogga" src="Bilder/kapetlogga.png">
     </header>
 
     <main>
