ny uppdatering! behövs mer bilder till glass/pizza sidorna

--- a/LABB1-master, nyaste/index.html
+++ b/LABB1-master, nyaste/index.html
@@ -16,7 +16,7 @@
         <nav class="nav main-nav">
             <ul>
                 <il><a href="index.html">HEM</a></il>
-                <il><a href="pizzakebab.html">PIZZA & KEBAB</a></il>
+                <il><a href="pizza.html">PIZZA & KEBAB</a></il>
                 <il><a href="glass.html">GLASS</a></il>
                 <il><a href="contact.html">OM OSS</a></il>
             </ul>
@@ -25,15 +25,14 @@
     </header>
 
     <main>
-        <section>
+        <section class="container">
             <div>
                 <h2>Välkommen till den prisbelönta pizzerian; KAPET!</h2>
-                <p>Under 50 års tid har vår restaurang asd</p>
             </div>
         </section>
 
-        <section>
-            <div class="schedule">
+        <section class="container">
+            <div>
                 <div>
                     <h3>Öppettider</h3>
                     <p>Vardagar: Dygnet Runt</p>
@@ -43,13 +42,19 @@
             </div>
         </section>
 
-        <section>
+        <section class="container">
             <div>
                 <h4>Information angående Covid-19</h4>
                 <p>Vi håller avstånd inne på restaurangen. Att beställa online fungerar utmärkt!
                 <br> Vi har stadens bästa utkörning som alltid håller tidsramen på 10 minuter en kvart efter beställning.</p>
             </div>
         </section>
+
+        <div class="winnerInfo container">
+            <strong>Här är gänget bakom vår underbara restaurang. År 2019 vann vi Pizza-VM storslaget! 
+                Enligt domarna var våra pizzor från en annan dimension i jämförelse med de andra.</strong>
+            <img src="bilder/kapetGang.jpg">
+        </div>
     </main>
 
     <footer class="main-footer">
