förhoppningsvis sista uppdateringen?!

--- a/LABB1-master, nyaste/contact.html
+++ b/LABB1-master, nyaste/contact.html
@@ -63,8 +63,10 @@
             <br>
             Kapet@hotmail.com
         </p>
-        <img src="bilder/liljeholmen.jpg" id="adressImg">
     </section>
+<div class="map">
+    <img src="bilder/liljeholmen.jpg" id="adressImg">
+</div>
     
     <footer class="main-footer">
         <div class="container main-footer-container">
