mina ev ändringar

--- a/LABB1-master, nyaste/contact.html
+++ b/LABB1-master, nyaste/contact.html
@@ -52,7 +52,7 @@
     <section class="center">
         <h1>Kontakt</h1>
         <p>
-            KAPET RESTURANG
+            KAPET RESTURANG <!--KAPET PIZZERIA?-->
             <br>
             Smaskigavägen 247
             <br>
