--- a/LABB1-master, nyaste/glass.html
+++ b/LABB1-master, nyaste/glass.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kapets glass</title>
 
-    <link href="glass.css" rel="stylesheet" type="text/css"/>
+   <!--<link href="glass.css" rel="stylesheet" type="text/css"/>-->
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
