--- a/LABB1-master, nyaste/contact.html
+++ b/LABB1-master, nyaste/contact.html
@@ -16,7 +16,7 @@
         <nav class="nav main-nav">
             <ul>
                 <il><a href="index.html">HEM</a></il>
-                <il><a href="pizza.html">PIZZA & KEBAB</a></il>
+                <il><a href="pizza.html">PIZZA</a></il>
                 <il><a href="glass.html">GLASS</a></il>
                 <il><a href="about.html">OM OSS</a></il>
             </ul>
@@ -45,8 +45,8 @@
     <section class="lefty">
         <h1>Info</h1>
         <p>
-            Our resturant have an intresting story but not <br> intresting enough to write it over here. 
-             <br> We are a hard working company with a big variety <br> of products, everything from kebab, pizza and ice cream.
+            Vår restaurang har en intressant historia, <br> men tyvärr får vi inte plats med allt här. 
+            <br> Kapet är just nu den bästa pizzerian i Stockholm <br> och vi gör vårt bästa varje dag för att forsätta vara det.
         </p>
     </section>
     
