--- a/LABB1-master, nyaste/index.html
+++ b/LABB1-master, nyaste/index.html
@@ -16,7 +16,7 @@
         <nav class="nav main-nav">
             <ul>
                 <il><a href="index.html">HEM</a></il>
-                <il><a href="pizza.html">PIZZA & KEBAB</a></il>
+                <il><a href="pizza.html">PIZZA</a></il>
                 <il><a href="glass.html">GLASS</a></il>
                 <il><a href="contact.html">OM OSS</a></il>
             </ul>
