--- a/LABB1-master, nyaste/pizza.html
+++ b/LABB1-master, nyaste/pizza.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kapets Pizza</title>
-
     <link href="style.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +16,7 @@
     <nav class="nav main-nav">
         <ul>
             <il><a href="index.html">HEM</a></il>
-            <il><a href="pizza.html">PIZZA & KEBAB</a></il>
+            <il><a href="pizza.html">PIZZA</a></il>
             <il><a href="glass.html">GLASS</a></il>
             <il><a href="contact.html">OM OSS</a></il>
         </ul>
