klar på riktigt nu

--- a/LABB1-master, nyaste/contact.html
+++ b/LABB1-master, nyaste/contact.html
@@ -39,16 +39,16 @@
 
             Meddelande:<br> <textarea name=”VisitorComment” rows=”4″ cols=”20″>
 
-</textarea><br><br> <input type="button" value="Skicka"> </form>
-
+        </textarea><br><br> <input type="button" value="Skicka"> </form>
     </section>
-    <section class="lefty">
+
+    <article class="lefty">
         <h1>Info</h1>
         <p>
             Vår restaurang har en intressant historia, <br> men tyvärr får vi inte plats med allt här. 
             <br> Kapet är just nu den bästa pizzerian i Stockholm <br> och vi gör vårt bästa varje dag för att forsätta vara det.
         </p>
-    </section>
+    </article>
     
     <section class="center">
         <h1>Kontakt</h1>
@@ -64,9 +64,10 @@
             Kapet@hotmail.com
         </p>
     </section>
-<div class="map">
-    <img src="bilder/liljeholmen.jpg" id="adressImg">
-</div>
+
+    <aside class="map">
+        <img src="bilder/liljeholmen.jpg" id="adressImg">
+    </aside>
     
     <footer class="main-footer">
         <div class="container main-footer-container">
