--- a/LABB1-master, nyaste/index.html
+++ b/LABB1-master, nyaste/index.html
@@ -42,13 +42,13 @@
             </div>
         </section>
 
-        <section class="container">
+        <article class="container">
             <div>
                 <h4>Information angående Covid-19</h4>
                 <p>Vi håller avstånd inne på restaurangen. Att beställa online fungerar utmärkt!
                 <br> Vi har stadens bästa utkörning som alltid håller tidsramen på 10 minuter en kvart efter beställning.</p>
             </div>
-        </section>
+        </article>
 
         <div class="winnerInfo container">
             <strong>Här är gänget bakom vår underbara restaurang. År 2020 vann vi Pizza-VM storslaget! 
