--- a/LABB1-master, nyaste/pizza.html
+++ b/LABB1-master, nyaste/pizza.html
@@ -17,7 +17,7 @@
         <ul>
             <il><a href="index.html">HEM</a></il>
             <il><a href="pizza.html">PIZZA</a></il>
-            <il><a href="glass.html">GLASS</a></il>
+            <il><a href="glass.html">EFTERRÄTTER</a></il>
             <il><a href="contact.html">OM OSS</a></il>
         </ul>
     </nav>
